# Realization-of-Computer-Vision-Algorithms

./: README.md
01_Introduction_and_Grayscale/Code_01_grayscale_solution/01_grayscale_solution/src/: CMakeLists.txt  main.cpp
02_Thresholding/02_threshold/src/: CMakeLists.txt  main.cpp
03_histogram/03_histogram_solution/: Histogram.cpp  Histogram.h  Threshold.cpp  main.cpp
04_Spatial_Filter/Code_04_spatial_filter_solution/04_spatial_filter_solution/src/: CMakeLists.txt  main.cpp
05_Morphology/Code_05_morphology_solution/05_morphology_solution/src/: CMakeLists.txt  Morphology.cpp  main.cpp
06_Segmentation/06_segmentation_solution/src/: CMakeLists.txt  Filter.cpp  Histogram.cpp  Segmentation.cpp  Segmentation.h  Timer.h  main.cpp
07_Circle_Detection/Code_07_circle_detection_solution/07_circle_detection_solution/data/: 3_circles.tiff  face.tiff  one_circle_r12.tiff  two_circles_different_size.tiff  two_circles_r12.tiff
07_Circle_Detection/Code_07_circle_detection_solution/07_circle_detection_solution/src/: CMakeLists.txt  Filter.cpp  Morphology.cpp  Morphology.h  Segmentation.cpp  Segmentation.h  main.cpp
